--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,9 @@
         "anax/url": "^2.0.0-beta.2",
         "anax/view": "^2.0.2",
         "mos/cimage": "^0.7.20",
-        "symfony/yaml": "^3.4.0"
+        "symfony/yaml": "^3.4.0",
+        "dbwebb/ctf": "^1.0",
+        "anax/anax-cli": "^1.2"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12",
